feat: validate Entra ID JWT roles and audience