@@ -1,30 +1,28 @@
 package com.rutaexpress.bff.config;
 
+import java.util.Collection;
+import java.util.Collections;
+import java.util.List;
+
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.oauth2.jwt.Jwt;
 
-import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
-import java.util.stream.Collectors;
-
-public class CognitoGrantedAuthoritiesConverter
+/** Maps Microsoft Entra ID application roles from the access-token roles claim. */
+public class EntraGrantedAuthoritiesConverter
         implements Converter<Jwt, Collection<GrantedAuthority>> {
 
     @Override
     public Collection<GrantedAuthority> convert(Jwt jwt) {
+        List<String> roles = jwt.getClaimAsStringList("roles");
 
-        List<String> groups =
-                jwt.getClaimAsStringList("cognito:groups");
-
-        if (groups == null || groups.isEmpty()) {
+        if (roles == null || roles.isEmpty()) {
             return Collections.emptyList();
         }
 
-        return groups.stream()
-                .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
+        return roles.stream()
+                .<GrantedAuthority>map(role -> new SimpleGrantedAuthority("ROLE_" + role))
+                .toList();
     }
 }
